RESOLVED FIXED67894
Body background with background-attachment:fixed stays in place during rubber-banding
https://bugs.webkit.org/show_bug.cgi?id=67894
Summary Body background with background-attachment:fixed stays in place during rubber...
Adam Roben (:aroben)
Reported 2011-09-10 11:43:14 PDT
To reproduce: 1. data:text/html,%3Cbody%20style=%22background-image:url(http://www.webkit.org/images/download.png);%20background-attachment:fixed%22%3E%3Cdiv%20style=%22background-color:white;%20width:400px;height:400px%22%3EScroll%20this%20page%20and%20watch%20the%20background%20stay%20in%20place 2. Scroll far enough to trigger rubber-banding The body's background stays in place, rather than obeying the rubber-banding.
Attachments
Patch (1.98 KB, patch)
2013-01-03 15:33 PST, Simon Fraser (smfr)
bdakin: review+
mitz
Comment 1 2011-09-10 11:45:15 PDT
Simon Fraser (smfr)
Comment 2 2013-01-03 15:33:40 PST
Simon Fraser (smfr)
Comment 3 2013-01-03 15:47:30 PST
Note You need to log in before you can comment on or make changes to this bug.