Body background with background-attachment:fixed stays in place during rubber-banding https://bugs.webkit.org/show_bug.cgi?id=67894

Reviewed by Beth Dakin.

Use FrameView::scrollOffsetForFixedPosition() to compute the location of the rect
used to position fixed backgrounds, since it takes rubber-banding into account.

No test because rubber-banding isn't testtable in layout tests.

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::calculateBackgroundImageGeometry):

Canonical link: https://commits.webkit.org/124233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138757 268f45cc-cd09-0410-ab3c-d52691b4dbfc